--- a/todo
+++ b/todo
@@ -1,1 +1,4 @@
 to create a method to dynamically create a unique_specimen_id based on what type of sample is chosen
+
+4th March 2023
+write test cases for patient app
